Update execution counts and add output to phonons.ipynb

--- a/SCRIPTS/phonons.ipynb
+++ b/SCRIPTS/phonons.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "id": "1bd23fa2",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "id": "3f1ee29a",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "2898f065",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "id": "10fd683e",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,16 @@
    "execution_count": null,
    "id": "e21cd3ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.         0.         0.         0.09539331 0.56565134\n",
+      " 0.97180176 2.03489148 2.10394687 3.84068329 4.19857926 8.17738956]\n"
+     ]
+    }
+   ],
    "source": [
     "# Definir la matriz dinamica D(k)\n",
     "def dynamic_matrix(k, cell, e, e_norm, e_jindex, force_cts, masses_ij):\n",
@@ -266,7 +275,8 @@
     "            matrix_ij = -kappa * np.outer(e_vec, e_vec)\n",
     "            D[i*3:(i+1)*3, j*3:(j+1)*3] += matrix_ij * phase  / masses_ij[i, j]\n",
     "            D[i*3:(i+1)*3, i*3:(i+1)*3] += -matrix_ij / masses_ij[i, i]\n",
-    "                \n",
+    "\n",
+    "    D = (D + D.conj().T) / 2  # Asegurar que es hermitica\n",
     "    return D\n",
     "\n",
     "\n",
@@ -280,7 +290,6 @@
     "\n",
     "    # Matriz dinamica para este k\n",
     "    D_k = dynamic_matrix(k_vec, cell, e, e_norm, e_jindex, force_cts, masses_ij)\n",
-    "    D_k = (D_k + D_k.conj().T) / 2  # Asegurar que es hermitica\n",
     "\n",
     "    # Autovalores (omega^2)\n",
     "    w2, _ = eigh(D_k)\n",
@@ -295,7 +304,9 @@
     "\n",
     "\n",
     "# Ordenar los modos\n",
-    "frequencies.sort(axis=1)\n"
+    "frequencies.sort(axis=1)\n",
+    "\n",
+    "print(frequencies[0])"
    ]
   },
   {
@@ -308,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "ff369502",
    "metadata": {},
    "outputs": [
@@ -333,6 +344,7 @@
     "plt.figure(figsize=(10,6))\n",
     "for modo in range(n_modes):\n",
     "    plt.plot(K_norm, frequencies[:, modo], 'k-', linewidth=1)\n",
+    "\n",
     "\n",
     "for i in range(len(labels)):\n",
     "    plt.axvline(K_norm[n_points_segment * i], color='gray', linestyle='--', linewidth=0.8)\n",
