Add definition of force constant matrix in phonons notebook

--- a/NOTEBOOKS/phonons.ipynb
+++ b/NOTEBOOKS/phonons.ipynb
@@ -53,6 +53,13 @@
     "- $\\mathbf{R}$ recorre todas las celdas cristalinas.\n",
     "- $\\Phi^{\\alpha\\beta}_{ij}(\\mathbf{R})$ es la **constante de fuerza** que acopla el átomo $i$ en la celda origen con el átomo $j$ en la celda ubicada en $\\mathbf{R}$.\n",
     "\n",
+    "Donde la matriz de constante de fuerza se define como:\n",
+    "$$\n",
+    "\\boldsymbol{\\Phi}_{ij}(\\mathbf{R}) = \n",
+    "K_{ij}(\\mathbf{R})\\,\n",
+    "\\left( \\hat{\\mathbf{d}}_{ij} \\otimes \\hat{\\mathbf{d}}_{ij} \\right)\n",
+    "$$\n",
+    "\n",
     "Para el caso de las interacciones, se distinguen en color rojo aquellas correspondientes a primeros vecinos y en color verde las de segundos vecinos. Los átomos azules (átomos 1 y 2) corresponden a silicio, mientras que los átomos rosados (átomos 3 y 4) corresponden a hidrógeno. Dado que la disposición y naturaleza de las interacciones es muy similar entre las especies, se presentará un esquema únicamente para los átomos 1 y 4, ya que resultan los más sencillos de visualizar en el plano original.\n",
     "\n",
     "![Imagen de la celda vista desde el plano xy](IMAGE\\Cristal_celdas.png)\n",
